--- a/mobile.css
+++ b/mobile.css
@@ -6,7 +6,7 @@
 ██      ██  ██████  ██████  ██ ███████ ███████
 */
 
-@media screen and (max-width: 1000px) and (max-height: 800px) {
+@media screen and (max-width: 1000px) and (max-height: 850px) {
   #hero {
     height: 800px;
     background-attachment: scroll;
@@ -197,11 +197,16 @@
   }
   .hero-to-movies {
     background-size: 190% 100%;
-    
   }
 }
 @media screen and (max-width: 700px) and (orientation: landscape) {
   .hero-to-movies {
     background-size: 100% 100%;
+  }
+}
+
+@media screen and (max-width: 350px) and (max-height: 600px) {
+  .feature p {
+    padding: 10px 50px;
   }
 }
